@@ -98,17 +98,17 @@ DWARF section [28] '.debug_info' at offset 0x1078:
              byte_size            (data1) 8
              type                 (GNU_ref_alt) [    53]
  [    31]    subprogram
-             external             (flag_present) 
+             external             (flag_present) yes
              name                 (strp) "main"
              decl_file            (data1) 1
              decl_line            (data1) 3
-             prototyped           (flag_present) 
+             prototyped           (flag_present) yes
              type                 (GNU_ref_alt) [    3e]
              low_pc               (addr) 0x00000000004006ac <main>
              high_pc              (udata) 44 (0x00000000004006d8)
              frame_base           (exprloc) 
               [   0] call_frame_cfa
-             GNU_all_tail_call_sites (flag_present) 
+             GNU_all_tail_call_sites (flag_present) yes
              sibling              (ref_udata) [    6e]
  [    48]      formal_parameter
                name                 (strp) "argc"
@@ -159,17 +159,17 @@ DWARF section [28] '.debug_info' at offset 0x1078:
              byte_size            (data1) 8
              type                 (GNU_ref_alt) [    53]
  [    31]    subprogram
-             external             (flag_present) 
+             external             (flag_present) yes
              name                 (strp) "main"
              decl_file            (data1) 1
              decl_line            (data1) 3
-             prototyped           (flag_present) 
+             prototyped           (flag_present) yes
              type                 (GNU_ref_alt) [    3e]
              low_pc               (addr) 0x00000000004006ac <main>
              high_pc              (udata) 44 (0x00000000004006d8)
              frame_base           (exprloc) 
               [   0] call_frame_cfa
-             GNU_all_tail_call_sites (flag_present) 
+             GNU_all_tail_call_sites (flag_present) yes
              sibling              (ref_udata) [    6e]
  [    48]      formal_parameter
                name                 (strp) "argc"
@@ -216,17 +216,17 @@ DWARF section [25] '.debug_info' at offset 0x106c:
  [    26]    imported_unit
              import               (GNU_ref_alt) [     b]
  [    2b]    subprogram
-             external             (flag_present) 
+             external             (flag_present) yes
              name                 (strp) "call_foo"
              decl_file            (data1) 1
              decl_line            (data1) 3
-             prototyped           (flag_present) 
+             prototyped           (flag_present) yes
              type                 (GNU_ref_alt) [    3e]
              low_pc               (addr) +0x0000000000000670 <call_foo>
              high_pc              (udata) 23 (+0x0000000000000687)
              frame_base           (exprloc) 
               [   0] call_frame_cfa
-             GNU_all_call_sites   (flag_present) 
+             GNU_all_call_sites   (flag_present) yes
  [    41]      formal_parameter
                name                 (string) "fb"
                decl_file            (data1) 1
@@ -256,17 +256,17 @@ DWARF section [25] '.debug_info' at offset 0x106c:
  [    26]    imported_unit
              import               (GNU_ref_alt) [     b]
  [    2b]    subprogram
-             external             (flag_present) 
+             external             (flag_present) yes
              name                 (strp) "call_foo"
              decl_file            (data1) 1
              decl_line            (data1) 3
-             prototyped           (flag_present) 
+             prototyped           (flag_present) yes
              type                 (GNU_ref_alt) [    3e]
              low_pc               (addr) +0x0000000000000670 <call_foo>
              high_pc              (udata) 23 (+0x0000000000000687)
              frame_base           (exprloc) 
               [   0] call_frame_cfa
-             GNU_all_call_sites   (flag_present) 
+             GNU_all_call_sites   (flag_present) yes
  [    41]      formal_parameter
                name                 (string) "fb"
                decl_file            (data1) 1
@@ -295,17 +295,17 @@ DWARF section [28] '.debug_info' at offset 0x1088:
  [    26]    imported_unit
              import               (GNU_ref_alt) [     b]
  [    2b]    subprogram
-             external             (flag_present) 
+             external             (flag_present) yes
              name                 (GNU_strp_alt) "main"
              decl_file            (data1) 1
              decl_line            (data1) 8
-             prototyped           (flag_present) 
+             prototyped           (flag_present) yes
              type                 (GNU_ref_alt) [    30]
              low_pc               (addr) 0x00000000004004ec <main>
              high_pc              (udata) 18 (0x00000000004004fe)
              frame_base           (exprloc) 
               [   0] call_frame_cfa
-             GNU_all_call_sites   (flag_present) 
+             GNU_all_call_sites   (flag_present) yes
  [    41]      formal_parameter
                name                 (GNU_strp_alt) "argc"
                decl_file            (data1) 1
